--- a/init.qss
+++ b/init.qss
@@ -4,6 +4,8 @@ QLabel {color: #A153F4;
         font-size: 20px;}
 QLabel#heading {font-size: 30px;
                 color: red;}
+QLabel#error {font-size: 20px;
+                color: red;}
 QPushButton {width: 250px;
              height: 30px;
              font-size: 20px;
